// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly for one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
  </p>
</div>
`;

exports[`should render ExpenseSummary correctly for two expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $11.00
  </p>
</div>
`;
